--- a/RazorPagesMovie_draft2/Pages/Movies/Create.cshtml
+++ b/RazorPagesMovie_draft2/Pages/Movies/Create.cshtml
@@ -34,6 +34,11 @@
                 <span asp-validation-for="MyMovie.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="MyMovie.Rating" class="control-label"></label>
+                <input asp-for="MyMovie.Rating" class="form-control" />
+                <span asp-validation-for="MyMovie.Rating" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
