--- a/RazorPagesMovie_draft2/Pages/Movies/Details.cshtml
+++ b/RazorPagesMovie_draft2/Pages/Movies/Details.cshtml
@@ -35,6 +35,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MyMovie.Price)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MyMovie.Rating)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MyMovie.Rating)
+        </dd>
     </dl>
 </div>
 <div>
